# menaos

./: .gitignore  CLAUDE.md
backend/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SCHEMA_PARITY.md  alembic.ini  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/core/: base.py  config.py  db.py  enums.py  exceptions.py  mixins.py  protocols.py  security.py  types.py
backend/app/modules/accounts/: deps.py  models.py  router.py  schemas.py  selectors.py  services.py
backend/app/modules/catalog/: deps.py  models.py  router.py  schemas.py  selectors.py  services.py
backend/app/modules/disputes/: RULES.md  deps.py  models.py  router.py  schemas.py  selectors.py  services.py
backend/app/modules/operations/: deps.py  models.py  router.py  schemas.py  selectors.py  services.py
backend/app/modules/rbac/: deps.py  models.py  router.py  schemas.py  selectors.py  services.py
backend/app/modules/skills/: deps.py  models.py  router.py  schemas.py  selectors.py  services.py
backend/config/: settings.py
backend/migrations/: env.py
backend/migrations/versions/: 252ffd32950c_accounts_and_rbac_models.py  6a74d967563f_enable_btree_gist_extension.py  b9bfadafa8b5_add_users_password_column_for_dual_auth.py  c5d888e9fd6a_operations_and_disputes_models.py  eb5bdeaf45c4_skills_and_catalog_models.py
backend/tests/: conftest.py  factories.py  test_accounts_rbac_models.py  test_db.py  test_health.py  test_operations_disputes_models.py  test_skills_catalog_models.py  test_smoke.py
docs/: schema.v1.1.dbml
(+101 files in other folders)
