[project]
name = "menaos-backend"
version = "0.0.1"
description = "MENAOS Data Ops & Tracking System — Django/DRF backend"
requires-python = ">=3.12,<3.13"

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = '''
/(
    \.venv
  | migrations
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".venv", "migrations", "staticfiles"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "DJ",  # flake8-django
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
disallow_untyped_defs = false   # relax for skeleton; tighten per-app later
exclude = '(^|/)(\.venv|migrations|staticfiles)(/|$)'

[[tool.mypy.overrides]]
module = ["environ.*", "storages.*", "mozilla_django_oidc.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "tests.py"]
testpaths = ["tests"]
addopts = "-ra"
